Fixed author list.

--- a/_pages/author-sneha-kataria.html
+++ b/_pages/author-sneha-kataria.html
@@ -1,19 +1,19 @@
 ---
-title: "Sal"
+title: "Sneha Kataria"
 layout: default
-permalink: "/author-sal.html"
+permalink: "/author-sneha-kataria.html"
 ---
 <div class="container">
 <div class="row justify-content-center">
     <div class="col-md-8">        
         <div class="row align-items-center mb-5">
             <div class="col-md-9">
-                <h2 class="font-weight-bold">{{page.title}} <span class="small btn btn-outline-success btn-sm btn-round"><a href="{{ site.authors.sal.twitter }}">Follow</a></span></h2>
-                <p><a href="{{ site.authors.sal.site }}">{{ site.authors.sal.site }}</a></p>
-                <p class="excerpt">{{ site.authors.sal.bio }}</p>
+                <h2 class="font-weight-bold">{{page.title}} <span class="small btn btn-outline-success btn-sm btn-round"><a href="{{ site.authors.sneha.linkedin }}">Follow</a></span></h2>
+                <p><a href="{{ site.authors.sneha.site }}">{{ site.authors.sneha.site }}</a></p>
+                <p class="excerpt">{{ site.authors.sneha.bio }}</p>
             </div>
             <div class="col-md-3 text-right">
-                <img alt="{{ site.authors.sal.name }}" src="{{site.baseurl}}/{{ site.authors.sal.avatar }}" class="rounded-circle" height="100" width="100">
+                <img alt="{{ site.authors.sneha.name }}" src="{{site.baseurl}}/{{ site.authors.sneha.avatar }}" class="rounded-circle" height="100" width="100">
             </div>
         </div>
         <h4 class="font-weight-bold spanborder"><span>Posts by {{page.title}}</span></h4>
